adding maxlength attribute to the CEP input

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <div class="input-group-prepend">
                 <div class="input-group-text"><i class="fa fa-search"></i></div>
               </div>
-              <input type="text" class="form-control" id="CEP" />
+              <input type="text" class="form-control" id="CEP" maxlength="9" />
             </div>
           </div>
 
