refactor: remaking the js code to the be more fast

--- a/index.html
+++ b/index.html
@@ -52,68 +52,78 @@
         >
           <div class="bg-image"></div>
           <div class="col-auto">
-            <label for="CEP">CEP</label>
+            <label for="cepInput">CEP</label>
             <div class="input-group mb-2">
               <div class="input-group-prepend">
                 <div class="input-group-text"><i class="fa fa-search"></i></div>
               </div>
-              <input type="text" class="form-control" id="CEP" maxlength="9" />
+              <input
+                type="text"
+                class="form-control"
+                id="cepInput"
+                maxlength="9"
+              />
             </div>
           </div>
 
           <div class="col-auto">
-            <label for="rua">Rua</label>
+            <label for="ruaInput">Rua</label>
             <div class="input-group mb-2">
               <div class="input-group-prepend">
                 <div class="input-group-text">
                   <i class="fa fa-road"></i>
                 </div>
               </div>
-              <input type="text" class="form-control" id="rua" readonly />
+              <input type="text" class="form-control" id="ruaInput" readonly />
             </div>
           </div>
 
           <div class="col-auto">
-            <label for="numero">Número</label>
+            <label for="numeroInput">Número</label>
             <div class="input-group mb-2">
               <div class="input-group-prepend">
                 <div class="input-group-text">
                   <i class="fa fa-list-ol"></i>
                 </div>
               </div>
-              <input type="text" class="form-control" id="numero" />
+              <input type="text" class="form-control" id="numeroInput" />
             </div>
           </div>
 
           <div class="col-auto">
-            <label for="complemento">Complemento</label>
+            <label for="complementoInput">Complemento</label>
             <div class="input-group mb-2">
               <div class="input-group-prepend">
                 <div class="input-group-text"><i class="fa fa-plus"></i></div>
               </div>
-              <input type="text" class="form-control" id="complemento" />
+              <input type="text" class="form-control" id="complementoInput" />
             </div>
           </div>
 
           <div class="col-auto">
-            <label for="bairro">Bairro</label>
+            <label for="bairroInput">Bairro</label>
             <div class="input-group mb-2">
               <div class="input-group-prepend">
                 <div class="input-group-text"><i class="fa fa-home"></i></div>
               </div>
-              <input type="text" class="form-control" id="bairro" readonly />
+              <input
+                type="text"
+                class="form-control"
+                id="bairroInput"
+                readonly
+              />
             </div>
           </div>
 
           <div class="col-auto">
-            <label for="UF">UF</label>
+            <label for="ufInput">UF</label>
             <div class="input-group mb-2">
               <div class="input-group-prepend">
                 <div class="input-group-text">
                   <i class="fa fa-map-signs"></i>
                 </div>
               </div>
-              <input type="text" class="form-control" id="UF" readonly />
+              <input type="text" class="form-control" id="ufInput" readonly />
             </div>
           </div>
         </form>
